Update file readme

--- a/index.html
+++ b/index.html
@@ -47,118 +47,128 @@
   </head>
   <body>
     <header>
-      <h1>Денис Горовенко</h1>
-      <h3>Junior Front-end Developer</h3>
-      <p>
-        Молодий фахівець у сфері фронтенд-розробки з основами HTML, CSS і
-        JavaScript. Маю практичний досвід роботи над невеликими проектами,
-        зокрема в створенні адаптивних веб-сайтів. Постійно навчаюся новим
-        технологіям і прагну покращувати свої навички. Моя мета – розвиватися в
-        команді професіоналів і вносити свій вклад у цікаві проекти.
-      </p>
+      <div class="container">
+        <h1>Денис Горовенко</h1>
+        <h3>Junior Front-end Developer</h3>
+        <p>
+          Молодий фахівець у сфері фронтенд-розробки з основами HTML, CSS і
+          JavaScript. Маю практичний досвід роботи над невеликими проектами,
+          зокрема в створенні адаптивних веб-сайтів. Постійно навчаюся новим
+          технологіям і прагну покращувати свої навички. Моя мета – розвиватися
+          в команді професіоналів і вносити свій вклад у цікаві проекти.
+        </p>
+      </div>
     </header>
     <section>
-      <h3>Досвід роботи</h3>
-      <ul>
-        <li>
-          <h4>Front-end Developer</h4>
-          <p>Фріланс</p>
-          <p>Червень 2023 – жовтень 2024</p>
-          <ul>
-            <li>
-              Розробка адаптивних веб-сайтів для малих бізнесів, використовуючи
-              HTML, CSS та JavaScript.
-            </li>
-            <li>
-              Участь у командних проектах, зокрема у створенні інтерфейсів
-              користувача для веб-додатків.
-            </li>
-            <li>
-              Оптимізація веб-сторінок для підвищення швидкості завантаження та
-              покращення UX.
-            </li>
-            <li>
-              Використання фреймворків, таких як Bootstrap або Tailwind CSS, для
-              швидшої розробки та дизайну.
-            </li>
-            <li>
-              Співпраця з дизайнерами для реалізації естетичних та
-              функціональних вимог проектів.
-            </li>
-            <li>
-              Написання чистого та структурованого коду, дотримуючись принципів
-              кодування та стандартів веб-розробки.
-            </li>
-          </ul>
-        </li>
-        <li>
-          <h4>Junior Front-end Developer</h4>
-          <p>Стажування у веб-студії</p>
-          <p>Січень 2024 – травень 2024</p>
-          <ul>
-            <li>
-              Розробка та підтримка адаптивних веб-додатків з використанням
-              HTML, CSS, JavaScript та React.
-            </li>
-            <li>
-              Участь у проектуванні інтерфейсів та впровадженні функціональності
-              для покращення взаємодії з користувачами.
-            </li>
-            <li>
-              Співпраця з командою розробників для інтеграції API та
-              забезпечення коректної роботи веб-додатків.
-            </li>
-            <li>
-              Проведення тестування на різних браузерах для забезпечення
-              кросбраузерної сумісності.
-            </li>
-            <li>
-              Впровадження сучасних практик верстки та дизайну, таких як Flexbox
-              та CSS Grid.
-            </li>
-            <li>
-              Участь у регулярних обговореннях командних проектів та навчальних
-              семінарах для покращення навичок.
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <div class="container">
+        <h3>Досвід роботи</h3>
+        <ul>
+          <li>
+            <h4>Front-end Developer</h4>
+            <p>Фріланс</p>
+            <p>Червень 2023 – жовтень 2024</p>
+            <ul>
+              <li>
+                Розробка адаптивних веб-сайтів для малих бізнесів,
+                використовуючи HTML, CSS та JavaScript.
+              </li>
+              <li>
+                Участь у командних проектах, зокрема у створенні інтерфейсів
+                користувача для веб-додатків.
+              </li>
+              <li>
+                Оптимізація веб-сторінок для підвищення швидкості завантаження
+                та покращення UX.
+              </li>
+              <li>
+                Використання фреймворків, таких як Bootstrap або Tailwind CSS,
+                для швидшої розробки та дизайну.
+              </li>
+              <li>
+                Співпраця з дизайнерами для реалізації естетичних та
+                функціональних вимог проектів.
+              </li>
+              <li>
+                Написання чистого та структурованого коду, дотримуючись
+                принципів кодування та стандартів веб-розробки.
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h4>Junior Front-end Developer</h4>
+            <p>Стажування у веб-студії</p>
+            <p>Січень 2024 – травень 2024</p>
+            <ul>
+              <li>
+                Розробка та підтримка адаптивних веб-додатків з використанням
+                HTML, CSS, JavaScript та React.
+              </li>
+              <li>
+                Участь у проектуванні інтерфейсів та впровадженні
+                функціональності для покращення взаємодії з користувачами.
+              </li>
+              <li>
+                Співпраця з командою розробників для інтеграції API та
+                забезпечення коректної роботи веб-додатків.
+              </li>
+              <li>
+                Проведення тестування на різних браузерах для забезпечення
+                кросбраузерної сумісності.
+              </li>
+              <li>
+                Впровадження сучасних практик верстки та дизайну, таких як
+                Flexbox та CSS Grid.
+              </li>
+              <li>
+                Участь у регулярних обговореннях командних проектів та
+                навчальних семінарах для покращення навичок.
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </section>
     <section>
-      <h3>Освіта і кваліфікації</h3>
-      <ul>
-        <li>
-          <h4>Бакалавр</h4>
-          <p><span>Криворізький Національний Університет, Кривий Ріг</span></p>
-          <p>
-            Вчився на факультеті "Металургія". Більше уваги приділяв парам з
-            інформатики.
-          </p>
-        </li>
-        <li>
-          <h4>Java</h4>
-          <p><span>Hillel It School, Одеса</span></p>
-          <p>
-            Пройшов курси з мови Java для загального розуміння написання коду та
-            ПЗ, для розуміння ООП і подальшого розвитку у написанні
-            автоматизованих тестів.
-          </p>
-        </li>
-      </ul>
+      <div class="container">
+        <h3>Освіта і кваліфікації</h3>
+        <ul>
+          <li>
+            <h4>Бакалавр</h4>
+            <p>
+              <span>Криворізький Національний Університет, Кривий Ріг</span>
+            </p>
+            <p>
+              Вчився на факультеті "Металургія". Більше уваги приділяв парам з
+              інформатики.
+            </p>
+          </li>
+          <li>
+            <h4>Java</h4>
+            <p><span>Hillel It School, Одеса</span></p>
+            <p>
+              Пройшов курси з мови Java для загального розуміння написання коду
+              та ПЗ, для розуміння ООП і подальшого розвитку у написанні
+              автоматизованих тестів.
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
     <aside></aside>
     <footer>
-      <h3>Мої посилання</h3>
-      <ul>
-        <li>
-          <h4>Github</h4>
-          <a href="https://github.com/pressfboys" target="_blank">link</a>
-        </li>
-        <li>
-          <h4>Teegram</h4>
-          <a href="https://t.me/pressfboysUA" target="_blank">link</a>
-        </li>
-      </ul>
+      <div class="container">
+        <h3>Мої посилання</h3>
+        <ul>
+          <li>
+            <h4>Github</h4>
+            <a href="https://github.com/pressfboys" target="_blank">link</a>
+          </li>
+          <li>
+            <h4>Teegram</h4>
+            <a href="https://t.me/pressfboysUA" target="_blank">link</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
