update telegram link

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </li>
           <li>
             <h4>Teegram</h4>
-            <a href="https://t.me/pressfboysUA" target="_blank">link</a>
+            <a href="#" target="_blank">link</a>
           </li>
         </ul>
       </div>
